重写普通事件部分